# AuTxGNN

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check-new-evidence.yml  indexnow.yml  news-monitor.yml
config/: fields.yaml
data/news/: keywords.json  synonyms.json
docs/: CNAME  _config.yml  index.md  robots.txt
docs/_drugs/: abacavir.md  abatacept.md  abemaciclib.md  abiraterone.md  acalabrutinib.md  acamprosate.md  acarbose.md  acetaminophen.md  acetazolamide.md  acetic_acid.md  acetylsalicylic_acid.md  acitretin.md  aclidinium.md  adalimumab.md  afatinib.md  aflibercept.md  albendazole.md  alectinib.md  alemtuzumab.md  alendronic_acid.md  alfuzosin.md  allopurinol.md  alogliptin.md  alprazolam.md  alprostadil.md  aluminium.md  amantadine.md  ambrisentan.md  amifampridine.md  amiodarone.md  amisulpride.md  amitriptyline.md  amlodipine.md  amorolfine.md  amoxicillin.md  amphotericin_b.md  anakinra.md  anastrozole.md  anifrolumab.md  apalutamide.md  (+203 more)
docs/_includes/: head_custom.html
docs/data/: drugs.json  search-index.json
docs/fhir/: metadata  metadata.json
docs/fhir/ClinicalUseDefinition/: DB01220-0ec8eef9547e.json  DB01220-1.json  DB01220-1000.json  DB01220-10000.json  DB01220-100000.json  DB01220-100001.json  DB01220-100002.json  (+49978 more)
docs/smart/: app.html  launch.html  standalone.html
prompts/: pharmacist_v5_storytelling.md
scripts/: batch_collect_bundles.py  batch_generate_reports.py  drug_list.json  generate_drug_pages.py  generate_fhir_resources.py  run_kg_prediction.py
scripts/fetchers/: __init__.py  au_news.py
(+731 files in other folders)
